--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -1,128 +1,94 @@
-[
-    {
-        "key": "dbln",
-        "value": "%7B%22100024324256701%22%3A%22QVYMsWQK%22%7D",
-        "domain": "facebook.com",
-        "path": "/login/device-based/",
-        "hostOnly": false,
-        "creation": "2024-11-25T09:38:22.959Z",
-        "lastAccessed": "2024-11-25T09:38:22.959Z"
-    },
-    {
-        "key": "datr",
-        "value": "s6JAZ2e7ZHudzOA0qfTiBFRX",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-11-25T09:38:22.959Z",
-        "lastAccessed": "2024-11-25T09:38:22.959Z"
-    },
-    {
-        "key": "sb",
-        "value": "s6JAZ16n1J5B6nHdvJkENc5y",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-11-25T09:38:22.959Z",
-        "lastAccessed": "2024-11-25T09:38:22.959Z"
-    },
-    {
-        "key": "c_user",
-        "value": "100024324256701",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-11-25T09:38:22.959Z",
-        "lastAccessed": "2024-11-25T09:38:22.959Z"
-    },
-    {
-        "key": "fr",
-        "value": "0IGxqYqsLbDrPKjhw.AWVWm0wX8WagBWfLTQo3IZmWSr8.BnQKKz..AAA.0.0.BnQKMN.AWX_my1GfkQ",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-11-25T09:38:22.959Z",
-        "lastAccessed": "2024-11-25T09:38:22.959Z"
-    },
-    {
-        "key": "xs",
-        "value": "7%3A2rhgPjlLUZGQyQ%3A2%3A1732289294%3A-1%3A5271",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-11-25T09:38:22.959Z",
-        "lastAccessed": "2024-11-25T09:38:22.959Z"
-    },
-    {
-        "key": "locale",
-        "value": "en_US",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-11-25T09:38:22.959Z",
-        "lastAccessed": "2024-11-25T09:38:22.959Z"
-    },
-    {
-        "key": "ps_l",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-11-25T09:38:22.959Z",
-        "lastAccessed": "2024-11-25T09:38:22.959Z"
-    },
-    {
-        "key": "ps_n",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-11-25T09:38:22.959Z",
-        "lastAccessed": "2024-11-25T09:38:22.959Z"
-    },
-    {
-        "key": "wd",
-        "value": "515x986",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-11-25T09:38:22.959Z",
-        "lastAccessed": "2024-11-25T09:38:22.959Z"
-    },
-    {
-        "key": "dpr",
-        "value": "2.101494073867798",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-11-25T09:38:22.959Z",
-        "lastAccessed": "2024-11-25T09:38:22.959Z"
-    },
-    {
-        "key": "vpd",
-        "value": "v1%3B789x412x2.101494073867798",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-11-25T09:38:22.959Z",
-        "lastAccessed": "2024-11-25T09:38:22.959Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2681%3Btimestamp%3A1732525659",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-11-25T09:38:22.959Z",
-        "lastAccessed": "2024-11-25T09:38:22.959Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "100720464%3BT%3A28875427",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-11-25T09:38:22.959Z",
-        "lastAccessed": "2024-11-25T09:38:22.959Z"
+{
+  "version": "1.7.6",
+  "language": "en",
+  "useEnvForCredentials": false,
+  "envGuide": "When useEnvForCredentials enabled, it will use the process.env key provided for email and password, which helps hide your credentials, you can find env in render's environment tab, you can also find it in replit secrets.",
+  "DeveloperMode": true,
+  "autoCreateDB": true,
+  "allowInbox": false,
+  "autoClean": true,
+  "adminOnly": false,
+  "encryptSt": true,
+  "removeSt": false,
+  "UPDATE": {
+    "Package": false,
+    "EXCLUDED": [
+      "chalk",
+      "mqtt",
+      "https-proxy-agent"
+    ],
+    "Info": "This section manages the bot's automatic package updates. To disable this function, set 'Package' to false. If you only want to exclude specific packages, set them to true and add them in the 'EXCLUDED' list."
+  },
+  "commandDisabled": [],
+  "eventDisabled": [],
+  "BOTNAME": "Peenloon-Bot-Pack-V2",
+  "PREFIX": "/",
+  "ADMINBOT": [
+    "61565185946982",
+    ""
+  ],
+  "reactUnsend": [
+    "😡",
+    "😾",
+    "👎",
+    "😠"
+  ],
+  "DESIGN": {
+    "Title": "BotPack",
+    "Theme": "Blue",
+    "Admin": "Peen loon",
+    "Setup": {
+      "Info": "Design your own custom terminal Titlebar for the title and must contain no numbers",
+      "Theme": "Customize your console effortlessly with various theme colors. Explore Aqua, Fiery, Blue, Orange, Pink, Red, Retro, Sunlight, Teen, Summer, Flower, Ghost, Purple, Rainbow, and Hacker themes to enhance your terminal logs."
     }
-]
+  },
+  "APPSTATEPATH": "appstate.json",
+  "DEL_FUNCTION": false,
+  "ADD_FUNCTION": true,
+  "optionsFca": {
+    "forceLogin": true,
+    "listenEvents": true,
+    "updatePresence": true,
+    "listenTyping": false,
+    "logLevel": "error",
+    "selfListen": false,
+    "selfListenEvent": true,
+    "autoMarkDelivery": false,
+    "autoReconnect": false
+  },
+  "daily": {
+    "cooldownTime": 43200000,
+    "rewardCoin": 500
+  },
+  "work": {
+    "cooldownTime": 1200000
+  },
+  "help": {
+    "autoUnsend": true,
+    "delayUnsend": 60
+  },
+  "adminUpdate": {
+    "autoUnsend": true,
+    "sendNoti": true,
+    "timeToUnsend": 10
+  },
+  "adminNoti": {
+    "autoUnsend": true,
+    "sendNoti": true,
+    "timeToUnsend": 10
+  },
+  "sing": {
+    "YOUTUBE_API": "AIzaSyCqox-KXEwDncsuo2HIpE0MF8J7ATln5Vc",
+    "SOUNDCLOUD_API": "M4TSyS6eV0AcMynXkA3qQASGcOFQTWub"
+  },
+  "video": {
+    "YOUTUBE_API": "AIzaSyDEE1-zZSRVI8lTaQOVsIAQFgL-_BJKvhk"
+  },
+  "audio": {
+    "YOUTUBE_API": "AIzaSyDEE1-zZSRVI8lTaQOVsIAQFgL-_BJKvhk"
+  },
+  "menu": {
+    "autoUnsend": true,
+    "delayUnsend": 60
+  }
+}
